<resources>
    <string name="app_name">multi language</string>
    <string name="wellcome">Welcome</string>
    <string name="name">User Name</string>
    <string name="pass">Password</string>
    <string name="question">Password</string>
    <string name="dangnhap">Login</string>
    <string-array name="languages">
        <item>Select language</item>
        <item>English</item>
        <item>VietNam</item>
        <item>Japan</item>
        <item>China</item>
    </string-array>

</resources>
