<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardBackgroundColor="#d6eff0f2"
        android:layout_margin="8dp"
        card_view:cardCornerRadius="7dp"
        card_view:elevation="7dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtwellcome"
                android:text="@string/wellcome"
                android:textColor="#FFF"
                android:textSize="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <EditText
                android:id="@+id/edtname"
                android:hint="@string/name"
                android:layout_width="300dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/edtpass"
                android:layout_marginTop="16dp"
                android:hint="@string/pass"
                android:layout_width="300dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtquesttion"
                android:layout_marginTop="32dp"
                android:text="@string/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardBackgroundColor="#FFF"
                card_view:elevation="5dp">
                <Button
                    android:id="@+id/login"
                    android:layout_gravity="center"
                    android:background="#FFF"
                    android:text="@string/dangnhap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.CardView>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>